# All-Trie

./: Cargo.toml  README.md
src/: calculate_root.rs  lib.rs  nibble.rs  node_value.rs  prefix_proof.rs  proof_decode.rs  proof_encode.rs  proof_node_codec.rs  trie_structure.rs  util.rs
src/util/: leb128.rs  protobuf.rs
