[package]
name = "trie-tinker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
rand = "0.8.5"
blake2-rfc = { version = "0.2.18", default-features = false }
nom = { version = "7.1.1", default-features = false, features = ["alloc"] }
derive_more = "0.99.17"
slab = { version = "0.4.7", default-features = false }
either = { version = "1.8.0", default-features = false }
hex = "0.4.3"
fnv = { version = "1.0.7", default-features = false }
hashbrown = { version = "0.13.1", default-features = false, features = ["serde"] }   # TODO: remove serde feature
siphasher = { version = "0.3.10", default-features = false }
itertools = { version = "0.10.5", default-features = false }